--- a/docs_opdracht2/public/css/styles.css
+++ b/docs_opdracht2/public/css/styles.css
@@ -1,6 +1,20 @@
+:root {
+    --Lroze: #fccbbb;
+    --Droze: #e37957;
+    --Lbruin: #f5b25f;
+    --Lgeel: #e9c96b;
+}
+
 body {
-    background-color: white;
+    background-color: var(--Lroze);
     font: 13px Helvetica, Arial;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 1px 1px;
 }
 
 * { 
@@ -9,15 +23,20 @@ body {
     box-sizing: border-box; 
 }
 
-form { 
-    background: #000; 
+#messageForm {
+    position: fixed; 
+    background: var(--Droze); 
     padding: 3px; 
+    /* bottom: 30%;  */
+    bottom: 5em; 
+    width: 80%;
+    /* margin-right: 1em; */
+    border-radius: 5px;
 }
 
-form#messageForm {
-    position: fixed; 
-    bottom: 0; 
-    width: 100%;
+#messageForm > input {
+    width: 31%;
+    margin: 0em;
 }
 
 form input { 
@@ -29,7 +48,7 @@ form input {
 
 form button { 
     width: 9%; 
-    background: rgb(130, 224, 255); 
+    background: var(--Lbruin); 
     border: none; 
     padding: 10px; 
 }
@@ -42,15 +61,13 @@ form button {
 
 #messages li { 
     padding: 5px 10px; 
-    margin-bottom: 0.5em;
-}
-
-#messages li.chatMSG { 
-    background: lightblue;
+    margin: 0em 1em 0.5em 1em;
+    border-radius: 5px;
 }
 
 #messages li.serverMSG { 
-    background: lightcoral;
+    border: 5px solid var(--Droze);
+    background: var(--Droze);
 }
 
 #canvasContainer { 
@@ -59,36 +76,101 @@ form button {
     height: 25rem; 
     width: 25rem; 
     overflow: hidden; 
-    box-shadow: 0 0 5px 0 rgba(0,0,0,.33);
+    box-shadow: 0 0 5px 0 var(--Droze);
+}
+
+#chatSection {
+    /* background-color: white; */
+    /* border-style: solid;
+    border-width: 3px; */
+    /* border-color: blue; */
+    /* height: 100%; */
+    margin-top: 2em;
+    padding: 1em;
+    /* margin-right: -1em; */
 }
 
 canvas {
-    border: 1px solid black;
-    /* background-color: black; */
-    /* overflow: hidden;
-    margin: auto; */
-    /* display: block; */
-    /* height: 25rem;
-    width: 25rem; */
-    /* image-rendering: -moz-crisp-edges; */
-    /* image-rendering: pixelated; */
-    /* cursor: crosshair; */
-    /* order: 0; */
+    border: 1px solid var(--Droze);
+    background-color: white;
 }
 
-/* 
-.vLine{
-    border-left: 1px solid rgba(0,0,0,.33);
-    position: absolute;
-    height: 100%;
-    top: 0;
-    pointer-events: none;
+.locked {
+    display: none;
 }
 
-.hLine{
-    border-bottom: 1px solid rgba(0,0,0,.33);
+body > form {
+    display: block;
     position: absolute;
+    margin: auto;
     width: 100%;
-    left: 0;
-    pointer-events: none;
-} */
+    padding: 10em;
+    background-color: var(--Droze);
+}
+
+#usernameForm > h2 {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 2em;
+    color: var(--Lgeel);
+}
+
+#usernameForm > div  {
+    display: block;
+    margin: auto;
+    width: 35em;
+}
+
+#usernameForm > div > input {
+    width: 30em;
+}
+
+#usernameForm > div > button {
+    width: 10em;
+}
+
+#movielist {
+    margin: 1em;
+}
+
+#movielist > h2 {
+    padding: 0.5em;
+    background-color: var(--Droze);
+    color: white;
+    border-radius: 5px;
+    width: 85%;
+    margin-top: 1em;
+}
+
+img {
+    margin: 1em;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+}
+
+#roundEnd {
+    text-align: center;
+}
+
+#roundEnd img {
+    margin: 1em auto;
+    /* max-width: 80%; */
+    width: 25em;
+    display: block;
+}
+
+#informationTextAboutRound {
+    padding: 1em;
+    background-color: var(--Droze);
+    border-radius: 5px;
+    width: 50em;
+    margin: 1em auto;
+    /* color: var(--Lroze); */
+}
+
+#informationTextAboutRound > h1 {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+    color: var(--Lgeel);
+}
