--- a/docs_opdracht2/public/css/styles.css
+++ b/docs_opdracht2/public/css/styles.css
@@ -108,6 +108,37 @@ body > form {
     background-color: var(--Droze);
 }
 
+#gameMode > h1 {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 2em;
+    color: var(--Lgeel);
+    padding-top: 5em;
+}
+
+#gameMode > button {
+    text-align: center;
+    font-size: 1.5em;
+    color: black;
+    background-color: var(--Lgeel);
+
+    padding: 0.5em 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: 5em;
+}
+
+#gameMode > button:hover {
+    background-color: var(--Lbruin);
+}
+
+#gameMode {
+    background-color: var(--Droze);
+    margin: auto;
+    width: 100%;
+    text-align: center;
+}
+
 #usernameForm > h2 {
     text-align: center;
     font-size: 2em;
@@ -129,23 +160,23 @@ body > form {
     width: 10em;
 }
 
-#movielist {
+#drawRole {
     margin: 1em;
 }
 
-#movielist > h2 {
+#drawRole > h2 {
     padding: 0.5em;
     background-color: var(--Droze);
     color: white;
     border-radius: 5px;
     width: 85%;
     margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 img {
     margin: 1em;
-    max-width: 100%;
-    max-height: 100%;
+    width: 80%;
     display: block;
 }
 
@@ -173,4 +204,30 @@ img {
     font-size: 2em;
     margin-bottom: 0.5em;
     color: var(--Lgeel);
+}
+
+#scoreBoard h2 { 
+    font-size: 1.2em;
+    text-align: center;
+    padding: 5px 10px; 
+    margin: 0em 1em 0.5em 1em;
+    border-radius: 5px;
+    border: 5px solid var(--Droze);
+    background-color: var(--Droze);
+}
+
+#scoreBoard p { 
+    padding: 5px 10px; 
+    margin: 0em 1em 0.5em 1em;
+    border-radius: 5px;
+    border: 5px solid var(--Lbruin);
+    background-color: var(--Lbruin);
+}
+
+#quessRole > article {
+    padding: 5px 10px; 
+    margin: 2em 1em 0.5em 1em;
+    border-radius: 5px;
+    border: 5px solid var(--Droze);
+    background-color: var(--Droze);
 }
